--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div>
+    <div class="parentDiv">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-card>
+                <mat-card-title class="text-center">Login</mat-card-title>
+                <div>
+                    <mat-form-field class="example-full-width" appearance="fill" >
+                        <mat-label>Username</mat-label>
+                        <input type="text" matInput  placeholder="Username" formControlName="username">
+                        <mat-error *ngIf="loginForm.get('username')?.errors?.required">
+                            Please Enter Name
+                        </mat-error>
+                    </mat-form-field>
+                <div>
+                </div>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>Password</mat-label>
+                        <input type="password" matInput  placeholder="password" formControlName="password">
+                    </mat-form-field>
+                </div>
+                <div>
+                    <button mat-raised-button color="primary">SignIn</button>
+                </div>
+            </mat-card>
+    </form>
+    </div>
+</div>
